--- a/MYJOURNEY-FRONTEND/angular.json
+++ b/MYJOURNEY-FRONTEND/angular.json
@@ -16,13 +16,33 @@
               "optimization": false,
               "sourceMap": true
             },
+            "staging": {
+              "aot": true,
+              "extractLicenses": true,
+              "namedChunks": false,
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.staging.ts"
+                }
+              ]
+            },
             "production": {
               "aot": true,
               "extractLicenses": true,
               "namedChunks": false,
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false
+              "sourceMap": false,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.production.ts"
+                }
+              ]
             }
           },
           "options": {
@@ -41,6 +61,9 @@
           "configurations": {
             "development": {
               "buildTarget": "demo:build:development"
+            },
+            "staging": {
+              "buildTarget": "demo:build:staging"
             },
             "production": {
               "buildTarget": "demo:build:production"
